--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -112,6 +112,7 @@
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
+        android:onClick="addTask"
         android:text="Add Task"
         android:textAllCaps="false"
         android:textSize="30sp"
