--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -22,8 +22,10 @@
         android:layout_width="350dp"
         android:layout_height="450dp"
         android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/petButton"
-        tools:layout_editor_absoluteX="31dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/petButton" />
 
     <Button
         android:id="@+id/petButton"
