7/3/22 - Felix - style update

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -87,6 +87,7 @@
             android:id="@+id/emailInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/chivo"
             android:textColor="@color/cyan"
             android:textColorHint="@color/cyan" />
     </com.google.android.material.textfield.TextInputLayout>
