--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#1C4755</color>
     <color name="cyan">#00A08F</color>
-    <color name="orange">#EFC458</color>
-    <color name="red">#F66747</color>
+    <color name="yellow">#EFC458</color>
+    <color name="orange">#F66747</color>
 </resources>
