--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,7 @@
         android:textColorHint="@color/cyan"
         app:boxStrokeColor="@color/cyan"
         app:endIconMode="clear_text"
-        app:endIconTint="@color/dark_blue"
+        app:endIconTint="@color/dark_cyan"
         app:hintTextColor="@color/cyan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:startIconDrawable="@drawable/ic_baseline_person_24"
-        app:startIconTint="@color/dark_blue">
+        app:startIconTint="@color/dark_cyan">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameInputEditText"
@@ -42,11 +42,11 @@
         android:textColorHint="@color/cyan"
         app:boxStrokeColor="@color/cyan"
         app:counterEnabled="true"
-        app:counterTextColor="@color/dark_blue"
+        app:counterTextColor="@color/dark_cyan"
         app:endIconMode="password_toggle"
-        app:endIconTint="@color/dark_blue"
+        app:endIconTint="@color/dark_cyan"
         app:helperText="6 integer pin"
-        app:helperTextTextColor="@color/dark_blue"
+        app:helperTextTextColor="@color/dark_cyan"
         app:hintTextColor="@color/cyan"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
@@ -54,7 +54,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
         app:startIconDrawable="@drawable/ic_baseline_lock_24"
-        app:startIconTint="@color/dark_blue">
+        app:startIconTint="@color/dark_cyan">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/pinInputEditText"
@@ -74,14 +74,14 @@
         android:textColorHint="@color/cyan"
         app:boxStrokeColor="@color/cyan"
         app:endIconMode="clear_text"
-        app:endIconTint="@color/dark_blue"
+        app:endIconTint="@color/dark_cyan"
         app:hintTextColor="@color/cyan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
         app:startIconDrawable="@drawable/ic_baseline_email_24"
-        app:startIconTint="@color/dark_blue">
+        app:startIconTint="@color/dark_cyan">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailInputEditText"
@@ -101,18 +101,18 @@
         android:textColorHint="@color/cyan"
         app:boxStrokeColor="@color/cyan"
         app:counterEnabled="true"
-        app:counterTextColor="@color/dark_blue"
+        app:counterTextColor="@color/dark_cyan"
         app:endIconMode="password_toggle"
-        app:endIconTint="@color/dark_blue"
+        app:endIconTint="@color/dark_cyan"
         app:helperText="min 6 characters"
-        app:helperTextTextColor="@color/dark_blue"
+        app:helperTextTextColor="@color/dark_cyan"
         app:hintTextColor="@color/cyan"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
         app:startIconDrawable="@drawable/ic_baseline_lock_24"
-        app:startIconTint="@color/dark_blue">
+        app:startIconTint="@color/dark_cyan">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordInputEditText"
