--- a/app/src/main/res/layout/all_tasks_items.xml
+++ b/app/src/main/res/layout/all_tasks_items.xml
@@ -12,8 +12,10 @@
         android:id="@+id/taskImage_ImageView_AllTasksItems"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
