--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:onClick="renamePetButton"
+        android:onClick="renamePet"
         android:text="Rename Pet"
         app:layout_constraintBottom_toTopOf="@+id/petImage_ImageView_RewardsActivity"
         app:layout_constraintEnd_toEndOf="parent"
