--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -6,17 +6,84 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.AddTaskActivity">
 
-    <EditText
-        android:id="@+id/taskTime_EditText_AddTaskActivity"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:ems="8"
-        android:hint="15"
-        android:inputType="number"
-        android:textSize="25sp"
-        app:layout_constraintStart_toEndOf="@+id/taskTime_TextView_AddTaskActivity"
-        app:layout_constraintTop_toBottomOf="@+id/taskName_EditText_AddTaskActivity" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/pointsInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="points"
+        android:textColorHint="@color/cyan"
+        app:boxStrokeColor="@color/cyan"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/dark_cyan"
+        app:hintTextColor="@color/cyan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timeInputLayout"
+        app:startIconDrawable="@drawable/ic_baseline_star_24"
+        app:startIconTint="@color/dark_cyan">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/pointsInputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/cyan"
+            android:textColorHint="#757575" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/timeInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="time"
+        android:textColorHint="@color/cyan"
+        app:boxStrokeColor="@color/cyan"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/dark_cyan"
+        app:hintTextColor="@color/cyan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskNameInputLayout"
+        app:startIconDrawable="@drawable/ic_baseline_access_time_filled_24"
+        app:startIconTint="@color/dark_cyan">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/timeInputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/cyan"
+            android:textColorHint="#757575" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/taskNameInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:hint="task name"
+        android:textColorHint="@color/cyan"
+        app:boxStrokeColor="@color/cyan"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/dark_cyan"
+        app:hintTextColor="@color/cyan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addTask_TextView_AddTaskActivity"
+        app:startIconDrawable="@drawable/ic_baseline_library_add_check_24"
+        app:startIconTint="@color/dark_cyan">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/taskNameInputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/cyan"
+            android:textColorHint="#757575" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/addTask_TextView_AddTaskActivity"
@@ -32,80 +99,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/taskName_TextView_AddTaskActivity"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Task Name:"
-        android:textColor="#353535"
-        android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTask_TextView_AddTaskActivity" />
-
-    <EditText
-        android:id="@+id/taskName_EditText_AddTaskActivity"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:ems="8"
-        android:hint="Wash Dishes"
-        android:inputType="textPersonName"
-        android:textSize="25sp"
-        app:layout_constraintStart_toEndOf="@+id/taskName_TextView_AddTaskActivity"
-        app:layout_constraintTop_toBottomOf="@+id/addTask_TextView_AddTaskActivity" />
-
-    <TextView
-        android:id="@+id/taskTime_TextView_AddTaskActivity"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Time (min): "
-        android:textColor="#353535"
-        android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskName_EditText_AddTaskActivity" />
-
-    <EditText
-        android:id="@+id/taskReward_EditText_AddTaskActivity"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:ems="8"
-        android:hint="15"
-        android:inputType="number"
-        android:textSize="25sp"
-        app:layout_constraintStart_toEndOf="@+id/taskReward_TextView_AddTaskActivity"
-        app:layout_constraintTop_toBottomOf="@+id/taskTime_EditText_AddTaskActivity" />
-
-    <TextView
-        android:id="@+id/taskReward_TextView_AddTaskActivity"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Points:"
-        android:textColor="#353535"
-        android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTime_TextView_AddTaskActivity" />
-
-    <TextView
         android:id="@+id/taskPhoto_TextView_AddTaskActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-medium"
         android:text="Upload Photo:"
         android:textColor="#353535"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskReward_TextView_AddTaskActivity" />
+        tools:layout_editor_absoluteY="329dp" />
 
     <Button
         android:id="@+id/addTask_Button_AddTaskActivity"
