--- a/app/src/main/res/layout/activity_add_all_task.xml
+++ b/app/src/main/res/layout/activity_add_all_task.xml
@@ -6,4 +6,95 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.AddAllTaskActivity">
 
+    <Button
+        android:id="@+id/addTask_Button_AddTaskActivity3"
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="50dp"
+        android:onClick="addTask"
+        android:text="Add Task"
+        android:textAllCaps="false"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskPointsInputLayout" />
+
+    <TextView
+        android:id="@+id/taskName_TextView_AddAllTaskActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Add Task"
+        android:textColor="#353535"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/taskImage_ImageView_AddAllTaskActivity"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_AddAllTaskActivity"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/taskTimeInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:hint="time"
+        android:textColorHint="@color/cyan"
+        app:boxStrokeColor="@color/cyan"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/dark_cyan"
+        app:hintTextColor="@color/cyan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskImage_ImageView_AddAllTaskActivity"
+        app:startIconDrawable="@drawable/ic_baseline_library_add_check_24"
+        app:startIconTint="@color/dark_cyan">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/taskTimeInputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/cyan"
+            android:textColorHint="#757575" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/taskPointsInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:hint="points rewarded"
+        android:textColorHint="@color/cyan"
+        app:boxStrokeColor="@color/cyan"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/dark_cyan"
+        app:hintTextColor="@color/cyan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskTimeInputLayout"
+        app:startIconDrawable="@drawable/ic_baseline_library_add_check_24"
+        app:startIconTint="@color/dark_cyan">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/taskPointsInputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/cyan"
+            android:textColorHint="#757575" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
