--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -47,7 +47,7 @@
         app:hintTextColor="@color/cyan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskNameInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/taskTimeInputLayout"
         app:startIconDrawable="@drawable/ic_baseline_access_time_filled_24"
         app:startIconTint="@color/dark_cyan">
 
@@ -60,7 +60,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/taskNameInputLayout"
+        android:id="@+id/taskTimeInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
         app:startIconTint="@color/dark_cyan">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/taskNameInputEditText"
+            android:id="@+id/taskTimeInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/cyan"
@@ -102,13 +102,14 @@
         android:id="@+id/taskPhoto_TextView_AddTaskActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-medium"
         android:text="Upload Photo:"
         android:textColor="#353535"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="329dp" />
+        app:layout_constraintTop_toBottomOf="@+id/pointsInputLayout" />
 
     <Button
         android:id="@+id/addTask_Button_AddTaskActivity"
