14/03/2022 - Daniel: Half working updated timer

--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -10,7 +10,7 @@
         android:id="@+id/startTimer_Button_TimerActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="124dp"
         android:src="@drawable/ic_play_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="124dp"
         android:src="@drawable/ic_pause_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/startTimer_Button_TimerActivity"
@@ -34,10 +34,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="124dp"
         android:src="@drawable/ic_stop_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toEndOf="@+id/startTimer_Button_TimerActivity"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
@@ -70,6 +71,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="15dp"
         android:onClick="goBack"
+        android:textAllCaps="false"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,12 +81,13 @@
         android:id="@+id/finish_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:onClick="updateUserPoints"
-        android:text="finish task"
+        android:layout_marginBottom="412dp"
+        android:onClick="updateTotalPoints"
+        android:text="I'm finished!"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/startTimer_Button_TimerActivity"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
