--- a/app/src/main/res/layout/activity_pet_create.xml
+++ b/app/src/main/res/layout/activity_pet_create.xml
@@ -4,32 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.PetNamingActivity">
+    tools:context=".Controllers.PetCreateActivity">
 
     <TextView
         android:id="@+id/meetPet_TextView_PetNamingActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="119dp"
-        android:text="Meet your pet!"
+        android:layout_marginTop="40dp"
+        android:text="Create your pet!"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/petImage_ImageView_PetNamingActivity"
-        android:layout_width="253dp"
-        android:layout_height="247dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/nameTitle_TextView_PetNamingActivity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meetPet_TextView_PetNamingActivity"
-        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/nameTitle_TextView_PetNamingActivity"
@@ -68,15 +56,32 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/back_Button_PetNamingActivity"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="15dp"
-        android:onClick="backButton"
-        android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meetPet_TextView_PetNamingActivity"
+        app:srcCompat="@drawable/catpet" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/dogpet" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/unicornpet" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
