--- a/app/src/main/res/layout/activity_add_all_task.xml
+++ b/app/src/main/res/layout/activity_add_all_task.xml
@@ -6,16 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.AddAllTaskActivity">
 
-    <Button
-        android:id="@+id/back_Button_addAllTaskActivity"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="15dp"
+    <ImageButton
+        android:id="@+id/backButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:onClick="backButton"
-        android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/addTask_Button_AddTaskActivity3"
