--- a/app/src/main/res/layout/activity_all_task.xml
+++ b/app/src/main/res/layout/activity_all_task.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.AllTaskActivity">
 
+    <ImageButton
+        android:id="@+id/backButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        android:onClick="backButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_allTaskActivity"
         android:layout_width="400dp"
@@ -17,27 +32,15 @@
         app:layout_constraintTop_toBottomOf="@+id/addTask_TextView_AddTaskActivity2" />
 
     <Button
-        android:id="@+id/back_Button_addTaskActivity2"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="15dp"
-        android:onClick="backButton"
-        android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
         android:id="@+id/addActivity_Button_TasksActivity2"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="15dp"
         android:onClick="goToAddTaskActivity"
         android:text="Add Task"
-        app:layout_constraintBottom_toTopOf="@+id/back_Button_addTaskActivity2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="602dp" />
 
     <TextView
         android:id="@+id/addTask_TextView_AddTaskActivity2"
