16/3/21 - Felix - Lucas u silly little goose smh #3

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -44,6 +44,7 @@
             android:id="@+id/pointsInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="number"
             android:textColor="@color/cyan"
             android:textColorHint="#757575" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -70,6 +71,7 @@
             android:id="@+id/timeInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="number"
             android:textColor="@color/cyan"
             android:textColorHint="#757575" />
     </com.google.android.material.textfield.TextInputLayout>
