17/3/21 - Felix - task ui updates

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="cyan">#00A08F</color>
     <color name="yellow">#EFC458</color>
     <color name="orange">#F66747</color>
+    <color name="light_grey">#F5F5F5</color>color>
 </resources>
