--- a/app/src/main/res/layout/tasks_items.xml
+++ b/app/src/main/res/layout/tasks_items.xml
@@ -8,73 +8,91 @@
     android:outlineAmbientShadowColor="#E91E63"
     android:outlineSpotShadowColor="#E91E63">
 
-    <ImageView
-        android:id="@+id/taskImage_ImageView_AllTasksItems"
-        android:layout_width="150dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="20dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:cardBackgroundColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/taskTime_TextView_TasksItems"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Time"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_AllTasksItems" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_bg"
+            android:backgroundTint="@color/light_grey">
 
-    <TextView
-        android:id="@+id/points_TextView_TasksItems"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Reward"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/taskTime_TextView_TasksItems" />
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toStartOf="@+id/taskTime_TextView_TasksItems"
+                app:layout_constraintTop_toTopOf="@+id/taskTime_TextView_TasksItems"
+                app:srcCompat="@drawable/timer_icon_153935" />
 
-    <TextView
-        android:id="@+id/taskName_TextView_AllTasksItems"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="20dp"
-        android:text="Task Name"
-        android:textColor="@color/dark_cyan"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/points_TextView_TasksItems"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:text="Reward"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/taskTime_TextView_TasksItems" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
-        app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_AllTasksItems"
-        app:srcCompat="@drawable/timer_icon_153935" />
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toStartOf="@+id/points_TextView_TasksItems"
+                app:layout_constraintTop_toTopOf="@+id/points_TextView_TasksItems"
+                app:srcCompat="@drawable/star_icon_stylized_svg" />
 
+            <TextView
+                android:id="@+id/taskName_TextView_AllTasksItems"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="Task Name"
+                android:textColor="@color/dark_cyan"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toEndOf="@+id/taskImage_ImageView_AllTasksItems"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/star_icon_stylized_svg" />
+            <TextView
+                android:id="@+id/taskTime_TextView_TasksItems"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:text="Time"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/taskImage_ImageView_AllTasksItems" />
+
+            <ImageView
+                android:id="@+id/taskImage_ImageView_AllTasksItems"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/avatars" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
