--- a/app/src/main/res/layout/activity_pet.xml
+++ b/app/src/main/res/layout/activity_pet.xml
@@ -114,7 +114,7 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/bearCountTextView"
+        android:id="@+id/teddyBearCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="75dp"
