20/03/2022 - Daniel: Finished money

--- a/app/src/main/res/layout/activity_pet.xml
+++ b/app/src/main/res/layout/activity_pet.xml
@@ -166,4 +166,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/teddyMoneyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:text="$50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teddyBearImageView" />
+
+    <TextView
+        android:id="@+id/bananaMoneyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="188dp"
+        android:text="$100"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bananaImageView" />
+
+    <TextView
+        android:id="@+id/SoapMoneyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="64dp"
+        android:text="$200"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/soapImageView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
