21/3/21 - Felix - Pet comments

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.AddTaskActivity">
+    tools:context="da.todo.da_todo.Controllers.AddTaskActivity">
 
     <ImageButton
         android:id="@+id/backButton3"
