--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.TimerActivity">
+    tools:context="da.todo.da_todo.Controllers.TimerActivity">
 
     <TextView
         android:id="@+id/points_TextView_TimerActivity"
