--- a/app/src/main/res/layout/activity_add_task_pin.xml
+++ b/app/src/main/res/layout/activity_add_task_pin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.AddTaskPinActivity">
+    tools:context="da.todo.da_todo.Controllers.AddTaskPinActivity">
 
     <ImageButton
         android:id="@+id/backButton_AddTaskPinActivity"
