--- a/app/src/main/res/layout/activity_pet.xml
+++ b/app/src/main/res/layout/activity_pet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.PetActivity">
+    tools:context="da.todo.da_todo.Controllers.PetActivity">
 
     <ProgressBar
         android:id="@+id/hungerProgressBar"
