--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.SignInActivity">
+    tools:context="da.todo.da_todo.Controllers.SignInActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputPassword_TextInput_SignInActivity"
